# DoganAILAp

./: .dockerignore  .editorconfig  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .replit  ADVANCED_UI_PLAN.md  API_SPECIFICATION.md  APP_REPORT.md  BACKUP_RESTORE.md  BRANDING_GUIDE.md  BRAND_DETAILS.md  CHANGELOG.md  CONFIGURATION_SUMMARY.md  CONSOLIDATION_PLAN.md  CREATE-DESKTOP-SHORTCUT.md  DATABASE_ENHANCEMENT_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.api-pdf  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.web  ENGINE_ENHANCEMENT_PROGRESS_REPORT.md  ENHANCED_ARCHITECTURE_CHECKLIST.md  ENHANCED_ARCHITECTURE_SUMMARY.md  HYPER_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  Launch-DoganAI.bat  Launch-Regulatory-Monitor-Fixed.ps1  Launch-Regulatory-Monitor.bat  Makefile  (+88 more)
.github/: dependabot.yml
Dtos/: AnalyticsDtos.cs
adapters/: __init__.py
alembic/: env.py
app/: auth.py  config.py  database.py  db.py  init_db.py  main.py  models.py  monitoring.py  report_pdf.py  schemas.py  seed.py
attached_assets/: MAP-GOV-SecurePortal-IBM-Lenovo_1756123696949.yaml  Pasted--body-div-id-root-div-class-min-h-screen-flex-div-class-flex-1-flex-flex-col-justify-c-1756554437412_1756554437414.txt  Pasted--plugin-vite-react-babel-home-runner-workspace-frontend-src-pages-Login-tsx-Unexpected-token-31--1756554523931_1756554523933.txt  __init___1756123714568.py  api_1756123714568.py  ar_1756123705380.yml  ci_1756123757189.yml  compliance_1756123714569.py  compose.gov_1756123738511.yml  database_1756123714569.py  docker-compose.dev_1756123738511.yml  en_1756123705380.yml  health_1756123714569.py  models_1756123714569.py  monitoring_1756123714569.py  sector_kpis_2024_2025_1756123745426.json  settings_1756123714570.py  validators_1756123714570.py
backend/: analytics_engine.py  compliance_engine.py  report_generator.py  risk_engine.py  server.py  server_complete.py  server_v2.py  simple_api.py
benchmarks/: configs.yaml
codex/: agent.yml
compose/: .env.example  README.md  docker-compose.yml
config/: production.env  settings.py  temp_config.json
dataset/: end_users.csv  ksa_connectors_matrix.csv  ksa_connectors_matrix.xlsx  ksa_regulatory_matrix.xlsx  vendor_enduser_map.csv  vendor_regulator_map.csv  vendors.csv
db/: init_timescale.sql  seed.sql
docs/: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pylintrc  .replit  .replit.txt  .yamllint  API_REQUIREMENTS_GUIDE.md  APPLICATION_UPDATE_GUIDE.md  ARCHITECTURE.md  AUTOMATED_REGULATORY_UPDATE_SYSTEM.md  CODEOWNERS  CONFIGURATION_SYSTEM_README.md  CONNECTIVITY_TEST_REPORT.md  CURRENT_STATUS.md  Create_Desktop_Shortcut.ps1  Create_Shortcut.bat  DATABASE_ENHANCEMENT_SUMMARY.md  DATABASE_ENHANCEMENT_TASKS.md  DEPLOYMENT_SUCCESS.md  DESKTOP_SHORTCUT_GUIDE.md  DR_BACKUP_PLAN.md  Dockerfile.strict  DoganAI Compliance Kit.bat  DoganAI_Launcher.bat  DoganAI_Master_Launcher.bat  Dogan_Adly_Strict_Blueprint_v1.0.md  DoganaiKit.md  Doğan AI Lab Platform Whitepaper.docx  E2E_VALIDATION_REPORT.md  ENGINE_CONTRACT.md  ENGINE_ENHANCEMENT_ENFORCEMENT_CHECKLIST.md  ENGINE_ENHANCEMENT_PROGRESS_REPORT.md  ENHANCED_ARCHITECTURE_CHECKLIST.md  ENHANCED_ARCHITECTURE_SUMMARY.md  ENHANCED_FEATURES_DOCUMENTATION.md  ENTERPRISE_PLATFORM_COMPLETE.md  FINAL_SYSTEM_OVERVIEW.md  HOURLY_MAINTENANCE_SYSTEM.md  (+192 more)
e2e/: README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
elasticsearch-config/: elasticsearch.yml
engine/: health.py
examples/: backend.py  compliance_app.py
feature_flags/: Untitled-1.json  flags.json  manager.py
frontend/: .env.example  .prettierrc.json  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1756893749142-9c24e1345695.mjs  vitest.config.ts
gateway/: main.py
governance/: framework.py
improvements/: deploy.py  doganai_integration.py  enhanced_api.py  error_handling.py  mobile_ui.py  monitoring.py  performance.py  performance_monitoring.py  proposal_integration.py  security.py
infra/: Dockerfile.db  Dockerfile.migrate  docker-compose-simple.yml  docker-compose-strong.yml  docker-compose.yml  haproxy.cfg  nginx.conf  postgresql.conf  prometheus.yml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
microservices/: .env.production.template
platform/src/: README.md  main.py  pyproject.toml  requirements.txt
platform/src/apps/: components.py  database.py  init_db.py  main.py
platform/src/cli/: __init__.py
platform/src/core/: cli.py  compliance.py  database.py  dependency_manager.py  master_integration_check.py  settings.py
platform/src/demo/: quick_demo.py
platform/src/deploy/: Dockerfile  haproxy.cfg  pg_hba.conf
platform/src/deploy/k8s/: README.md  configmaps.yaml  deploy-k8s.ps1  deployments.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secrets.yaml  services.yaml  storage.yaml
platform/src/deploy/k8s/helm-chart/: Chart.yaml  values.yaml
platform/src/docs/runbooks/: report-generator.md
platform/src/doganai_compliance_kit.egg-info/: entry_points.txt  top_level.txt
platform/src/governance/: service_catalog.yml
platform/src/migrate/migrations/: V1__doganai_core_simple.sql
platform/src/models/: schemas.py
platform/src/repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
platform/src/scripts/: check_dependencies.py  migrate_to_enhanced_architecture.py  simple_data_seed.sql  test_imports.py  validate_imports.py  validate_structure.py  wait-for.sh
platform/src/services/: compliance.py
platform/src/services/architecture/: __init__.py  compliance_service.py  core.py
platform/src/strict/: attestation_service.py  evidence_graph.py  performance_optimizer.py  policy_engine.py
platform/src/tests/: conftest.py  test_api_new.py  test_comprehensive_security.py  test_ui_smoke.py
platform/src/tests/smoke/: test_quick.py
platform/src/utils/: cache_warmer.py  validators.py
(+1146 files in other folders)
