[project]
name = "scenariokit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pydantic==2.10.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["backend"]
